fix(day-12): 📱 use min-height instead
Utilize min-height instead of height, so that if there are numerous
links, the page won't be cropped off, allowing us to view the full
content

--- a/daily/12-cards/style.css
+++ b/daily/12-cards/style.css
@@ -13,7 +13,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .profileCard {
